[gd_scene format=3 uid="uid://dm87n5k6m4l3p"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://be87n5k6m4l3p" path="res://scenes/game_shape.tscn" id="2_shape_scene"]

[sub_resource type="LabelSettings" id="LabelSettings_score"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_level"]
font_size = 24
font_color = Color(0, 0, 0, 0.4)

[node name="Game" type="Node2D"]
script = ExtResource("1_script")
shape_scene = ExtResource("2_shape_scene")

[node name="Background" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0

[node name="ShapeContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CutLineVisual" type="Line2D" parent="CanvasLayer"]
visible = false
width = 2.0
default_color = Color(0, 0, 0, 0.3)
begin_cap_mode = 2
end_cap_mode = 2

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 80.0
offset_bottom = 147.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_score")
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 150.0
offset_bottom = 184.0
grow_horizontal = 2
text = "LEVEL 1"
label_settings = SubResource("LabelSettings_level")
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/HUD"]
custom_minimum_size = Vector2(400, 10)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = null
theme_override_styles/fill = null
value = 100.0
show_percentage = false

[node name="TargetMarker" type="ColorRect" parent="CanvasLayer/HUD/ProgressBar"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 240.0
offset_right = 244.0
grow_vertical = 2
color = Color(0, 0, 0, 0.2)
